--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "lib/index.js",
   "repository": "git@github.com:IagoLast/karma-falcon-benchmark.git",
   "author": "IagoLast <iago.lastra@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "falcon-benchmark": "^0.1.0"
+  }
 }
